<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tarum.helena.hobby.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_text1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_text2"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/main_text3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pictures" />

        <Button
            android:id="@+id/button_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_menu" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
